v2.10.2-minor bug fixes, theme contrast, index update

--- a/index.css
+++ b/index.css
@@ -97,6 +97,13 @@ p.compare img {
     float: left; 
     border-radius: 3.6% / 8%;
     border: 1px solid rgb(138, 138, 138);
+    box-shadow: 0px 0px 6px #a5a5a5;
+    margin-bottom: 2px;
+}
+
+p.compare img:hover {
+    border-bottom: 3px solid #d40039 !important;
+    margin-bottom: 0;
 }
 
 p.compare img:nth-child(2) {
@@ -111,7 +118,7 @@ h2 {
     font-size: 313%;
     line-height: 1.2em;
     margin-bottom: 0.8em;
-    margin-top: 1.6em;    
+    margin-top: 3em;    
     border-radius: 0 1em 0 0 / 0 0.3em 0 0;
 } 
 
@@ -220,8 +227,12 @@ img.imglink {
     border-radius: 0.6em;    
 }
 
-img[alt*='watermark'] {
-    filter: contrast(1.13);
+img.boost {
+    filter: contrast(1.08) brightness(1.08);
+}
+
+img.imglink:hover {
+    border-bottom-style: dashed !important;
 }
 
 .limg {
@@ -246,8 +257,8 @@ code {
     font-size: 90%;
     line-height: 1.8em;
     overflow: auto;  
-    margin-bottom: 2.3em;
-    margin-top: 1.3em;
+    margin-bottom: 3.3em;
+    margin-top: 2.3em;
     box-shadow: inset 0px 0px 36px #eaeaea;
     border-radius: 0.3em;
 }
@@ -517,7 +528,7 @@ ul li {
     transition: all 0.22s ease;
 }
 
-.gallery > a:hover {
+.gallery > a:hover,  .gallery > a.show {
     box-shadow: 3px 6px 13px 1px rgba(0, 49, 49, 0.88);
     transform: skew(-2deg, -2deg) scale(0.965, 0.965);
     background: rgb(70, 70, 70);  
@@ -547,16 +558,16 @@ ul li {
     width: 100%;
     height: 100%;
     z-index: 100;
-    background: none;
+    background: linear-gradient(155deg, rgba(191, 252, 255, 0.33) 0%, rgba(212, 253, 255, 0.22) 23%, rgba(216, 253, 255, 0) 36%);
 }
 
-.gallery > a:hover::before  {
-    background: linear-gradient(155deg, rgba(191,252,255,0.33) 0%,rgba(212,253,255,0.22) 23%,rgba(216,253,255,0) 36%);    
+.gallery > a:hover::before,  .gallery > a.show::before  {
+    background: linear-gradient(155deg, rgba(191,252,255,0.33) 0%,rgba(212,253,255,0.22) 23%,rgba(216,253,255,0) 36%) !important;
     transform: translate(-1%,-1%);
 }
 
 .gallery .topimg:hover a::before  {
-    background: linear-gradient(160deg, rgba(191, 237, 255, 0.33) 0%,rgba(212,253,255,0.23) 18%,rgba(216,253,255,0) 36%);    
+    background: linear-gradient(160deg, rgba(191, 237, 255, 0.33) 0%,rgba(212,253,255,0.23) 18%,rgba(216,253,255,0) 36%) !important;
     transform: translate(-1%,-1%);
 }
 
@@ -575,7 +586,49 @@ ul li {
     font-family: 'Times New Roman', Arial, sans-serif;
     opacity: 0.66;
     text-shadow: 0 0 6px #000000, 0 0 6px #000000, 0 0 9px #000000, 0 0 9px #000000, 0 0 9px #000000, 0 0 13px #000000, 0 0 13px #000000, 0 0 19px #000000, 0 0 19px #000000;
-}    
+}
+
+#deepurl {
+    display: block;
+    width: 521px;
+    max-width: 100%;
+    position: relative;
+}
+#deepurl span {
+    position: absolute;
+    white-space: nowrap;
+    top: 33%;
+    color: rgb(221, 221, 221);
+    left: auto;
+    right: 0;
+    width: 64%;
+    height: 21%;
+    background: #161D20;
+    font-size: 16px;
+    line-height: 1.8em;
+    text-decoration: none;
+}
+
+#deepurl span i {
+    color: rgb(255, 242, 200);
+}
+
+#deepurl .sheep {
+   display: inline-block;
+   animation: sheep 0.3s linear 0s infinite alternate;
+   font-style: normal;
+}
+
+
+@keyframes sheep {
+    from { transform: scale(1);}
+    to { transform: scale(1.3); }
+  }
+
+
+#deepurl:hover span {
+    background: #d40025 ;
+}
 
 footer {    
     height: 4em;
@@ -800,6 +853,11 @@ footer {
 
 @media screen and (max-width: 550px) {
     
+    #deepurl span {
+        font-size: 11px;
+        line-height: 1.6em;
+    }
+
     #front-gallery img {
         width: 97px;
         margin: 2px;
@@ -830,8 +888,7 @@ footer {
         display: block;
     }
 
-    code, img.imglink {
-        width: 98%;
+    code, img.imglink {        
         font-size: 86%;
     } 
 
@@ -1024,6 +1081,10 @@ footer {
         text-shadow: 0 0 11px black;
     }
 
+    .dark img.imglink {
+        border-bottom: 2px solid #840017;
+    }
+
     .dark p, .dark h1, .dark h2, .dark h3, .dark ul, .dark li {
         background: none;
     }
@@ -1046,7 +1107,8 @@ footer {
     .dark .gallery a {
         background: #000000;        
         max-width: 202px;
-        filter: brightness(0.81) contrast(1.03) saturate(0.88);
+        filter: brightness(0.9) contrast(1.03) saturate(0.88);
+        box-shadow: 0px 0px 5px #000000;
     }
 
     .dark .gallery .topimg a {
@@ -1077,7 +1139,7 @@ footer {
     }
     
     .dark .secol .topimg.wider {
-        filter: contrast(1.3) brightness(0.66);
+        filter: contrast(1.3) brightness(0.73);
     }
 
     .dark .ssgafter {
@@ -1093,12 +1155,13 @@ footer {
     }
 
     .dark img[alt^='signpost'] {
-        filter: brightness(0.86);    
+        opacity: 0.86;
     }
 
     .dark p.compare img {
-        border: 3px solid black;
-        opacity: 0.8;
+        border: 2px solid black;
+        opacity: 0.9;
+        box-shadow: 0 0 5px black;
     }
 
     .dark #bigcode p {
